--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="javajam.css">
         <meta charset="UTF-8">
         <title>JavaJam Coffee House</title>
     </head>
@@ -23,6 +24,6 @@
     </main>
     <br>
     <footer>
-        <small><i>Copyright © 2018 JavaJam Coffee House <br> <a href="kylerkalen@kylerkalen.com">Kyler Kalen</a></i></small>
+        <i>Copyright © 2018 JavaJam Coffee House <br> <a href="kylerkalen@kylerkalen.com">Kyler Kalen</a></i>
     </footer>
 </html>
