--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="javajam.css">
         <meta charset="UTF-8">
         <title>JavaJam Coffee House Menu</title>
     </head>
@@ -13,18 +14,18 @@
     <main>
         <h2>Coffee at JavaJam</h2>
             <dl>
-                <dt><strong>Just Java</strong></dt>
+                <dt>Just Java</dt>
                 <dd>Regular house blend, decaffeinated coffee, or flavor of the day.</dd>
                 <dd>Endless Cup $3.00</dd>
-                <dt><strong>Cafe au Lait</strong></dt>
+                <dt>Cafe au Lait</dt>
                 <dd>House blended coffee infused into a smooth, steamed milk.</dd>
                 <dd>Single $2.00 Double $4.00</dd>
-                <dt><strong>Iced Cappuccino</strong></dt>
+                <dt>Iced Cappuccino</dt>
                 <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.</dd>
                 <dd>Single $4.75 Double $6.00</dd>
             </dl>
     </main>
     <footer>
-        <small><i>Copyright © 2018 JavaJam Coffee House <br> <a href="kylerkalen@kylerkalen.com">Kyler Kalen</a></i></small>
+        <i>Copyright © 2018 JavaJam Coffee House <br> <a href="kylerkalen@kylerkalen.com">Kyler Kalen</a></i>
     </footer>
 </html>
